# Isonia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Isonia/: CMakeLists.txt  Isonia.cpp  Isonia.h  Main.cpp
Isonia/CMake/: EmbedData.cmake
Isonia/Components/: Camera.cpp  Camera.h  CameraIsometric.h  Gravity.cpp  Gravity.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RigidBody.cpp  RigidBody.h  Transform.cpp  Transform.h
Isonia/Controllers/: Controllers.h  KeyboardController.cpp  KeyboardController.h  KeyboardControllerIsometric.cpp  KeyboardControllerIsometric.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Player.cpp  Player.h
Isonia/DLL/: IsoniaDLL.cpp  IsoniaDLL.h
Isonia/Debug/: Debug.h  PerformanceTracker.cpp  PerformanceTracker.h
Isonia/ECS/: Camera.cpp  Camera.h  ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Coordinator.cpp  Coordinator.h  Definitions.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  GameObject.cpp  GameObject.h  IComponentArray.h  Model.cpp  Model.h  System.h  SystemManager.cpp  SystemManager.h
Isonia/Math/: Bounds.cpp  Generics.cpp  Generics.h  GenericsToInt.cpp  Geometry.cpp  Hash.cpp  Hash.h  Interpolation.cpp  Interpolation.h  Math.h  Matrix.cpp  Matrix.h  Random.cpp  Retro.cpp  Retro.h  Transform.cpp  Trigonometry.cpp  Trigonometry.h  Vector.cpp  Vector.h
Isonia/Noise/: ConstantScalarWarpNoise.cpp  ConstantScalarWarpNoise.h  CurlNoise.cpp  FractalPerlinNoise.cpp  FractalPerlinNoise.h  Noise.h  PerlinNoise.cpp  PerlinNoise.h  ToNormal.h  VirtualNoise.cpp  VirtualWarpNoise.cpp  WarpNoise.h  WhiteNoise.cpp  WhiteNoise.h
Isonia/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
Isonia/Pipeline/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraIsometric.cpp  CameraIsometric.h  Device.cpp  Device.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  PipelineConfigInfo.h  PixelRenderer.cpp  PixelRenderer.h  PixelSwapChain.cpp  PixelSwapChain.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
Isonia/Pipeline/Descriptors/: DescriptorManager.cpp  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorWriter.cpp  DescriptorWriter.h  Descriptors.cpp  Descriptors.h
Isonia/Pipeline/RenderSystems/: DebuggerRenderSystem.cpp  GroundRenderSystem.cpp  RenderSystems.h  UIRenderSystem.cpp  WaterRenderSystem.cpp
Isonia/Pipeline/Systems/: DebuggerRenderSystem.h  FoliageRenderSystem.h  GroundRenderSystem.h  PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  WaterRenderSystem.h
Isonia/Renderable/: Builder.cpp  Builder.h  BuilderComplete.h  BuilderXZUniform.h  Color.cpp  Font.cpp  Model.cpp  Model.h  PaletteFactory.cpp  Primitive.cpp  PrimitiveFace.cpp  PrimitivePrism.cpp  PrimitiveSphere.cpp  Renderable.h  Text.cpp  Texture.cpp  Texture.h  TextureFactory.cpp  Vertex.cpp  Vertex.h  VertexComplete.cpp  VertexComplete.h  VertexXZUniform.h
Isonia/Renderable/Color/: Color.h  PaletteFactory.h  TextureFactory.h
Isonia/Renderable/Complete/: Builder.h  Model.h  Primitive.h  PrimitiveFace.h  PrimitivePrism.h  PrimitiveSphere.h  Vertex.h
Isonia/Renderable/PosNorm/: Builder.h  Vertex.h
Isonia/Renderable/Position/: Builder.h  Vertex.h
Isonia/Renderable/XZUniform/: Builder.h  Vertex.h
Isonia/Renderable/XZUniform/Grass/: Builder.h  Vertex.h
Isonia/Renderable/XZUniformN/: Builder.h  Vertex.h
Isonia/Renderable/XZUniformN/Grass/: Builder.h  Vertex.h
Isonia/Shaders/: CMakeLists.txt
Isonia/Shaders/Billboard/: FragShader.frag  GeomShader.geom  VertexShader.vert
Isonia/Shaders/Foliage/: FragShader.frag  GeomShader.geom  VertexShader.vert
Isonia/Shaders/Grass/: FragShader.frag  GeomShader.geom  VertexShader.vert
Isonia/Shaders/Ground/: FragShader.frag  VertexShader.vert
Isonia/Shaders/Include/: FragShader_frag.h  VertexShader_vert.h
Isonia/Shaders/Simple/: FragShader.frag  VertexShader.vert
Isonia/Shaders/UI/: FragShader.frag  VertexShader.vert
Isonia/Shaders/Water/: FragShader.frag  VertexShader.vert
Isonia/State/: FrameInfo.h  Heap.cpp  State.h
Isonia/Utilities/: HashUtility.h  MathUtility.h  PixelPerfectUtility.h
Isonia/Utils/: Memory.cpp  Utils.h
Isonia/Window/: Window.cpp  Window.h
